# petsc-rs

./: .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
build-probe-petsc/: Cargo.toml
build-probe-petsc/src/: lib.rs
examples/: Cargo.toml
examples/complex/: Cargo.toml
examples/complex/src/: ex2.rs
examples/dm/: Cargo.toml
examples/dm/src/: ex1.rs
examples/ksp/: Cargo.toml
examples/ksp/src/: ex1.rs  ex2.rs  ex23.rs  ex25.rs  ex29.rs  opt.rs
examples/snes/: Cargo.toml
examples/snes/src/: ex1.rs  ex12.rs  ex2.rs  ex28.rs  ex3.rs
examples/split-world/: Cargo.toml
examples/split-world/src/: ex.rs  ex1.rs
examples/vec/: Cargo.toml
examples/vec/src/: ex1.rs  ex2.rs
petsc-sys/: Cargo.toml  README.md  build.rs
petsc-sys/src/: lib.rs  petsc_wrapper.h
petsc-sys/tests/: basic_tests.rs
src/: dm.rs  indexset.rs  internal_macros.rs  ksp.rs  lib.rs  macros.rs  mat.rs  preconditioner.rs  snes.rs  spaces.rs  vector.rs  viewer.rs
