[package]
name = "petsc-rs"
version = "0.1.0"
authors = ["ZackJorquera <zackary.jorquera@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = {git = "https://github.com/rsmpi/rsmpi.git", branch = "master", default-features = false }
petsc-sys = { path = "./petsc-sys/" }
