[package]
name = "petsc-rs"
version = "0.1.0"
authors = ["Zack Jorquera <zackary.jorquera@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["petsc-sys/default", "petsc-int-i32", "petsc-real-f64"]
petsc-real-f64 = ["petsc-sys/petsc-real-f64"]
petsc-real-f32 = ["petsc-sys/petsc-real-f32"]
petsc-int-i32 = ["petsc-sys/petsc-int-i32"]
petsc-int-i64 = ["petsc-sys/petsc-int-i64"]
petsc-use-complex = ["num-complex", "petsc-sys/petsc-use-complex"]

[dependencies]
# adding libffi-sys is a work around, mpi requeres libffi which will fail to compile on WSL2 without 
# the `system` feature so we require libffi to be already be install everywhere. This seems to be an
# issue with the "user-operations" feature for mpi (which is the default), but `default-features = false`
# doesn't seem to work.
libffi-sys = { version = "*", features = ["system"] }
mpi = {git = "https://github.com/ZackJorquera/rsmpi.git", branch = "trait_object_safety", default-features = false }
petsc-sys = { path = "./petsc-sys/", default-features = false }
num-complex = { version = "0.4", optional = true }
ndarray = "0.15"
