[package]
name = "petsc-rs"
version = "0.1.0"
authors = ["Zack Jorquera <zackary.jorquera@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["petsc-sys/default", "petsc-int-i32", "petsc-real-f64"]
petsc-real-f64 = ["petsc-sys/petsc-real-f64"]
petsc-real-f32 = ["petsc-sys/petsc-real-f32"]
petsc-int-i32 = ["petsc-sys/petsc-int-i32"]
petsc-int-i64 = ["petsc-sys/petsc-int-i64"]
petsc-use-complex = ["num-complex", "petsc-sys/petsc-use-complex"]

[dependencies]
mpi = {git = "https://github.com/rsmpi/rsmpi.git", rev = "82e1d35", default-features = false }
petsc-sys = { path = "./petsc-sys/", default-features = false }
num-complex = { version = "0.4", optional = true }
ndarray = "0.15"
seq-macro = "0.2"

[build-dependencies]
semver = "1.0"
build-probe-petsc = { path = "./build-probe-petsc"}
ndarray = { version = "0.15", features = ["approx"] }
