[package]
name = "petsc-sys"
version = "0.1.0"
authors = ["Zack Jorquera <zackary.jorquera@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["petsc-real-f64", "petsc-int-i32"]
petsc-real-f64 = []
petsc-real-f32 = []
petsc-int-i32 = []
petsc-int-i64 = []
petsc-use-complex = ["num-complex"]

[dependencies]
mpi = {git = "https://github.com/ZackJorquera/rsmpi.git", branch = "trait_object_safety", default-features = false }
num-complex = { version = "0.4", optional = true }

[build-dependencies]
cc = "1.0"
bindgen = "0.58"
pkg-config = "0.3"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
build-probe-mpi = "*"
