[package]
name = "petsc-sys"
version = "0.1.0"
authors = ["Zack Jorquera <zackary.jorquera@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["petsc-real-f64", "petsc-int-i32"]
petsc-real-f64 = []
petsc-real-f32 = []
petsc-int-i32 = []
petsc-int-i64 = []
petsc-use-complex = ["num-complex"]
generate-enums = []
use-private-headers = []

[dependencies]
mpi-sys = { git = "https://github.com/rsmpi/rsmpi.git", rev = "82e1d35" }
num-complex = { version = "0.4", optional = true }

[build-dependencies]
bindgen = "0.55"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
build-probe-mpi = { git = "https://github.com/rsmpi/rsmpi.git", rev = "82e1d35" }
build-probe-petsc = { path = "../build-probe-petsc" }
regex = "1.5"
