[package]
name = "dm"
version = "0.1.0"
authors = ["Zack Jorquera <zackary.jorquera@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dm-ex1"
path = "src/ex1.rs"

[dependencies]
mpi = {git = "https://github.com/rsmpi/rsmpi.git", rev = "82e1d35", default-features = false }
petsc-rs = { path = "../../" }
ndarray = "*"
