[package]
name = "ksp"
version = "0.1.0"
authors = ["ZackJorquera <jorquerazack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ex1"
path = "src/ex1.rs"

[[bin]]
name = "ex2"
path = "src/ex2.rs"

[[bin]]
name = "ex23"
path = "src/ex23.rs"

[dependencies]
# adding libffi-sys is a work around, mpi requeres libffi which will fail to compile on WSL2 without 
# the `system` feature so we require libffi to be already be install everywhere. This seems to be an
# issue with the "user-operations" feature for mpi (which is the default), but `default-features = false`
# doesn't seem to work.
libffi-sys = { version = "*", features = ["system"] }
mpi = {git = "https://github.com/rsmpi/rsmpi.git", branch = "master", default-features = false }
petsc-rs = { path = "../../" }
structopt = { version = "0.3", default-features = false }
