[package]
name = "ksp"
version = "0.1.0"
authors = [
    "Zack Jorquera <jorquerazack@gmail.com>"
]
edition = "2018"
description = """
Ports of PETSc ksp tutorials (the original C versions can be found at 
https://gitlab.com/petsc/petsc/-/tree/main/src/ksp/ksp/tutorials).
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
petsc-use-complex-unsafe = ["petsc-rs/petsc-use-complex-unsafe"]

[[bin]]
name = "ksp-ex1"
path = "src/ex1.rs"

[[bin]]
name = "ksp-ex2"
path = "src/ex2.rs"

[[bin]]
name = "ksp-ex23"
path = "src/ex23.rs"

[[bin]]
name = "ksp-ex25"
path = "src/ex25.rs"

[[bin]]
name = "ksp-ex29"
path = "src/ex29.rs"

[dependencies]
mpi = { git = "https://github.com/rsmpi/rsmpi.git", rev = "82e1d35", default-features = false }
petsc-rs = { path = "../../" }
ndarray = "0.15"
