[package]
name = "snes"
version = "0.1.0"
authors = ["Zack Jorquera <zackary.jorquera@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "snes-ex1"
path = "src/ex1.rs"

[[bin]]
name = "snes-ex2"
path = "src/ex2.rs"

[[bin]]
name = "snes-ex3"
path = "src/ex3.rs"

[dependencies]
mpi = {git = "https://github.com/ZackJorquera/rsmpi.git", branch = "trait_object_safety", default-features = false }
petsc-rs = { path = "../../" }
