[package]
name = "snes"
version = "0.1.0"
authors = ["Zack Jorquera <zackary.jorquera@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "snes-ex1"
path = "src/ex1.rs"

[[bin]]
name = "snes-ex2"
path = "src/ex2.rs"

[[bin]]
name = "snes-ex3"
path = "src/ex3.rs"

[[bin]]
name = "snes-ex28"
path = "src/ex28.rs"

[dependencies]
mpi = {git = "https://github.com/rsmpi/rsmpi.git", branch = "master", default-features = false }
petsc-rs = { path = "../../" }
