[package]
name = "snes"
version = "0.1.0"
authors = [
    "Zack Jorquera <jorquerazack@gmail.com>"
]
edition = "2018"
description = """
Ports of PETSc snes tutorials (the original C versions can be found at 
https://gitlab.com/petsc/petsc/-/tree/main/src/snes/tutorials).
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
petsc-use-complex-unsafe = ["petsc-rs/petsc-use-complex-unsafe"]

[[bin]]
name = "snes-ex1"
path = "src/ex1.rs"

[[bin]]
name = "snes-ex2"
path = "src/ex2.rs"

[[bin]]
name = "snes-ex3"
path = "src/ex3.rs"

[[bin]]
name = "snes-ex12"
path = "src/ex12.rs"

[[bin]]
name = "snes-ex28"
path = "src/ex28.rs"

[dependencies]
mpi = { git = "https://github.com/rsmpi/rsmpi.git", rev = "82e1d35", default-features = false }
petsc-rs = { path = "../../" }
petsc-sys = { path = "../../petsc-sys/", default-features = false }
rand = "0.8"
