[package]
name = "vec"
version = "0.1.0"
authors = ["Zack Jorquera <zackary.jorquera@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
petsc-use-complex-unsafe = ["petsc-rs/petsc-use-complex-unsafe"]

[[bin]]
name = "vec-ex2"
path = "src/ex2.rs"

[dependencies]
mpi = {git = "https://github.com/rsmpi/rsmpi.git", rev = "82e1d35", default-features = false }
petsc-rs = { path = "../../" }
